# loki-code

./: .gitignore  CLAUDE.md  INTEGRATION_TESTS.md  Makefile  Modelfile  PROGRESS.md  README.md  UI_DECOUPLING_SUMMARY.md  context_manager.go  go.mod  length_function.go  main.go  main.py  merge_sort.go  orchestrator.go  pyproject.toml  pytest.ini  real_time_input_demo.py  requirements-test.txt  requirements.txt  run_tests.py  run_tui_with_logs.sh  setup.py  streaming.html  test-config.yaml  tools.go  ui.go
.claude/: settings.local.json
configs/: default.yaml  development.yaml  direct-mode.yaml  http-mode.yaml
src/loki_code/: __init__.py  main.py
src/loki_code/cli/: __init__.py  commands.py  handlers.py
src/loki_code/config/: __init__.py  loader.py  models.py
src/loki_code/core/: llm_client.py  llm_test.py  model_manager.py  task_classifier.py  tool_executor.py  tool_registry.py  tool_registry_original.py
src/loki_code/core/agent/: __init__.py  agent_core.py  conversation_manager.py  execution_planner.py  langchain_agent.py  langgraph_agent.py  loki_agent.py  memory_manager.py  permission_manager.py  request_analyzer.py  safety_manager.py  test_agent.py  types.py
src/loki_code/core/code_analysis/: __init__.py  code_analyzer.py  context_extractor.py  context_extractor_core.py  context_types.py  language_support.py  tree_sitter_parser.py
src/loki_code/core/commands/: __init__.py  confirmation_manager.py  processor.py  router.py  simple_llm_classifier.py  types.py  unified_context_manager.py
src/loki_code/core/llm_client/: __init__.py  client.py  exceptions.py
src/loki_code/core/prompts/: __init__.py  builder.py  context.py  templates.py  test_prompts.py
src/loki_code/core/providers/: __init__.py  base.py  factory.py  ollama.py
src/loki_code/core/response/: __init__.py  conversation.py  formatter.py  parser.py  processor.py  streaming.py
src/loki_code/core/services/: __init__.py  agent_service.py  dynamic_tool_registry.py  http_agent_service.py  tool_bridge.py  tool_execution_service.py  unified_context_manager.py  unified_memory_manager.py
src/loki_code/core/tool_system/: __init__.py  tool_discovery.py  tool_registry_core.py  tool_search.py  tool_types.py
src/loki_code/nlp/: __init__.py  command_analyzer.py  pipeline_factory.py
src/loki_code/tests/: SMART_ENTITY_EXTRACTION_TESTS.md  __init__.py  conftest.py  simple_benchmarks.py  test_agent_basic.py  test_agent_integration.py  test_config_loader.py  test_config_models.py  test_entity_extraction_standalone.py  test_error_handling.py  test_file_writer.py  test_langgraph_agent.py  test_permission_system.py  test_provider_base.py  test_tool_integration.py
src/loki_code/tests/fixtures/: agent_test_scenarios.py  sample.js  sample.py  sample.rs  sample.ts  tool_test_fixtures.py
src/loki_code/tests/fixtures/sample_code/: test_sample.js  test_sample.py  test_sample.rs  test_sample.ts
src/loki_code/tests/tool_system/: __init__.py  test_cli_integration.py  test_security_validation.py  test_tool_execution.py  test_tool_execution_simple.py  test_tree_sitter_integration.py
src/loki_code/tools/: __init__.py  base.py  exceptions.py  file_reader.py  file_writer.py  langchain_adapters.py  langchain_tools.py  registry.py  test_simple_tool.py  types.py
src/loki_code/ui/: __init__.py  interface.py  message_bus.py  repl_app.py  textual_app.py  tui_adapter.py
src/loki_code/ui/commands/: __init__.py  parser.py  processor.py  router.py  shortcuts.py
src/loki_code/ui/progress/: __init__.py  animations.py  indicators.py  integration.py  managers.py
src/loki_code/utils/: __init__.py  error_handling.py  logging.py
